[maven] move scheduleUpdate to MavenProjectsManager
GitOrigin-RevId: 49d98439107dc837a0d4cff8af6fd900a0e948d6