@@ -827,6 +827,53 @@ public abstract class MavenProjectsManager extends MavenSimpleProjectComponent
     doScheduleUpdateProjects(List.of(), spec);
   }
 
+  Promise<Void> scheduleUpdate(@NotNull List<VirtualFile> filesToUpdate,
+                               @NotNull List<VirtualFile> filesToDelete,
+                               MavenImportSpec spec) {
+
+    if (MavenUtil.isLinearImportEnabled()) {
+      return MavenImportingManager.getInstance(myProject).scheduleUpdate(filesToUpdate, filesToDelete, spec).getFinishPromise()
+        .then(it -> null);
+    }
+
+    return scheduleUpdateSuspendable(spec, filesToUpdate, filesToDelete);
+  }
+
+  private Promise<Void> scheduleUpdateSuspendable(MavenImportSpec spec,
+                                                  List<VirtualFile> filesToUpdate,
+                                                  List<VirtualFile> filesToDelete) {
+    final AsyncPromise<Void> promise = new AsyncPromise<>();
+
+    if (ApplicationManager.getApplication().isUnitTestMode()) {
+      if (!ApplicationManager.getApplication().isWriteAccessAllowed()) {
+        updateMavenProjectsSync(spec, filesToUpdate, filesToDelete, promise);
+      }
+      else {
+        MavenLog.LOG.warn("updateAllMavenProjectsSync skipped in write action");
+      }
+    }
+    else {
+      AppExecutorUtil.getAppExecutorService().execute(() -> {
+        updateMavenProjectsSync(spec, filesToUpdate, filesToDelete, promise);
+      });
+    }
+
+    return promise;
+  }
+
+  private void updateMavenProjectsSync(MavenImportSpec spec,
+                                       List<VirtualFile> filesToUpdate,
+                                       List<VirtualFile> filesToDelete,
+                                       AsyncPromise<Void> promise) {
+    try {
+      updateMavenProjectsSync(spec, filesToUpdate, filesToDelete);
+      promise.setResult(null);
+    }
+    catch (Exception e) {
+      promise.setError(e);
+    }
+  }
+
   @ApiStatus.Internal
   public void forceUpdateProjects() {
     doScheduleUpdateProjects(List.of(), MavenImportSpec.EXPLICIT_IMPORT);
@@ -872,9 +919,7 @@ public abstract class MavenProjectsManager extends MavenSimpleProjectComponent
         scheduleUpdateAll(spec).processed(promise);
       }
       else {
-        myWatcher.scheduleUpdate(MavenUtil.collectFiles(projects),
-                                 Collections.emptyList(),
-                                 spec).processed(promise);
+        scheduleUpdate(MavenUtil.collectFiles(projects), List.of(), spec).processed(promise);
       }
     });
     return promise;
